# django-tenant-schemas

./: .editorconfig  .gitignore  .travis.yml  CHANGES.txt  Dockerfile  LICENSE  MANIFEST.in  README.markdown  README.rst  __init__.py  fig.yml  files.txt  pyproject.toml  setup.cfg  setup.py  tox.ini  version.py
.github/workflows/: ci.yml  pypi-publish.yml  validate-tutorial.yml
django_schemata/: __init__.py  middleware.py  mixins.py  tests.py  urlresolver.py  urlresolvers.py  utils.py
django_schemata/oracle_backend/: base.py
django_schemata/postgresql_backend/: base.py
django_schemata/templatetags/: schemata.py  tenant.py
docs/: advanced_usage.rst  conf.py  examples.rst  faq.rst  index.rst  install.rst  involved.rst  templates.rst  test.rst  use.rst  utils.rst
dpt_test_project/: manage.py
dpt_test_project/dpt_test_app/: models.py
dpt_test_project/dpt_test_project/: settings.py
dts_test_app/: models.py
dts_test_project/: tenant_schemas
dts_test_project/customers/: __init__.py  apps.py
dts_test_project/dts_test_app/: apps.py  models.py
dts_test_project/dts_test_project/: settings.py  settings_mulidb.py  urls.py
example_project/customers/: models.py
example_project/example_project/: settings.py  wsgi.py
examples/tenant_tutorial/: DockerReadMe.md  Dockerfile  docker-compose.yml  manage.py  requirements.txt
src/tenant_schemas/: apps.py  log.py  middleware.py  models.py  routers.py  template_loaders.py  urlresolvers.py  utils.py
tenant_schemas/: __init__.py  adapters.py  apps.py  cache.py  checks.py  clone.py  listeners.py  log.py  middleware.py  models.py  multidb.py  rename.py  routers.py  signals.py  storage.py  tasks.py  template_loaders.py  tests.py  urlresolvers.py  utils.py
tenant_schemas/contrib/: celery.py  tests.py
tenant_schemas/legacy/: template_loaders.py
tenant_schemas/management/: common.py
tenant_schemas/migration_executors/: __init__.py  async.py  base.py  multiproc.py  parallel.py  standard.py
(+105 files in other folders)
